fix templates